src/objects/PHQ_9__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>PHQ_9_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feel_bad_about_yourself__c</fullName>
        <inlineHelpText>Feeling bad about yourself - or that you are a failure or have let yourself or your family down?</inlineHelpText>
        <label>Feel bad about yourself</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feeling_depressed__c</fullName>
        <inlineHelpText>Feeling down, depressed, or hopeless?</inlineHelpText>
        <label>Feeling depressed?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hard_to_function_based_on_above__c</fullName>
        <inlineHelpText>If you checked off any problems, how difficult have these problems made it for you to do your work, take care of things at home, or get along with other people?</inlineHelpText>
        <label>Hard to function based on above?</label>
        <picklist>
            <picklistValues>
                <fullName>Not difficult at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely difficult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Little_interest_doing_things__c</fullName>
        <inlineHelpText>Little interest or pleasure in doing things?</inlineHelpText>
        <label>Little interest doing things?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Moving_or_speaking_slow_or_fast__c</fullName>
        <inlineHelpText>Moving or speaking so slowly that other people could have noticed. Or the opposite - being so fidgety or restless that you have been moving around a lot more than usual?</inlineHelpText>
        <label>Moving or speaking slow or fast</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_9_Flag__c</fullName>
        <formula>Score_Summary__c &gt;= 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PHQ-9 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHQ_Feel_bad_about_yourself__c</fullName>
        <inlineHelpText>Feeling bad about yourself - or that you are a failure or have let yourself or your family down?</inlineHelpText>
        <label>PHQ Feel bad about yourself?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Feeling_depressed__c</fullName>
        <inlineHelpText>Feeling down, depressed, or hopeless?</inlineHelpText>
        <label>PHQ Feeling depressed?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Hard_to_function_based_on_above__c</fullName>
        <inlineHelpText>If you checked off any problems, how difficult have these problems made it for you to do your work, take care of things at home, or get along with other people?</inlineHelpText>
        <label>PHQ Hard to function based on above?</label>
        <picklist>
            <picklistValues>
                <fullName>Not difficult at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely difficult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Little_interest_doing_things__c</fullName>
        <inlineHelpText>Little interest or pleasure in doing things?</inlineHelpText>
        <label>PHQ Little interest doing things?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Moving_or_speaking_slow_or_fast__c</fullName>
        <inlineHelpText>Moving or speaking so slowly that other people could have noticed. Or the opposite - being so fidgety or restless that you have been moving around a lot more than usual?</inlineHelpText>
        <label>PHQ Moving or speaking slow or fast</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Poor_appetite_or_overeating__c</fullName>
        <inlineHelpText>Poor appetite or overeating</inlineHelpText>
        <label>PHQ Poor appetite or overeating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Sleep_trouble__c</fullName>
        <inlineHelpText>Trouble falling or staying asleep, or sleeping too much</inlineHelpText>
        <label>PHQ Sleep trouble?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Thoughts_of_self_harm__c</fullName>
        <inlineHelpText>Thoughts that you would be better off dead, or of hurting yourself</inlineHelpText>
        <label>PHQ Thoughts of self-harm?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Tired_or_lack_energy__c</fullName>
        <inlineHelpText>Feeling tired or having little energy</inlineHelpText>
        <label>PHQ Tired or lack energy?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHQ_Trouble_concentrating__c</fullName>
        <inlineHelpText>Trouble concentrating on things, such as reading the newspaper or watching television</inlineHelpText>
        <label>PHQ Trouble concentrating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Poor_appetite_or_overeating__c</fullName>
        <inlineHelpText>Poor appetite or overeating</inlineHelpText>
        <label>Poor appetite or overeating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>if (isNull (Score_Summary__c), &quot;&quot;,
if (Score_Summary__c &gt;= 20,
 &quot;Severe depression&quot;, if(Score_Summary__c &gt;= 15, 
&quot;Moderately severe depression&quot;, 
if(Score_Summary__c &gt;= 10, 
&quot;Moderate depression&quot;, 
if(Score_Summary__c &gt;= 5, 
&quot;Mild depression&quot;, &quot;Minimal depression&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Summary__c</fullName>
        <description>calculated on save: assessmentSource -&gt; totalScorePHQ
because long expression for formula</description>
        <label>Score Summary</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sleep_trouble__c</fullName>
        <inlineHelpText>Trouble falling or staying asleep, or sleeping too much</inlineHelpText>
        <label>Sleep trouble?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Notes__c</fullName>
        <description>Survey_Notes__c</description>
        <label>Survey Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thoughts_of_self_harm__c</fullName>
        <inlineHelpText>Thoughts that you would be better off dead, or of hurting yourself</inlineHelpText>
        <label>Thoughts of self-harm?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tired_or_lack_energy__c</fullName>
        <inlineHelpText>Feeling tired or having little energy</inlineHelpText>
        <label>Tired or lack energy?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trouble_concentrating__c</fullName>
        <inlineHelpText>Trouble concentrating on things, such as reading the newspaper or watching television</inlineHelpText>
        <label>Trouble concentrating?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>aPHQ 9</label>
    <nameField>
        <displayFormat>P9{0000}</displayFormat>
        <label>PHQ 9 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aPHQ 9s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>